--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,4 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  --accent-color: #FF0070;
+  --main-font-color: #353430;
+}
