--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,9 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  font-family: 'IBM Plex mono', sans-serif;
+  font-size: 18px;
+  line-height: 23.4px;
 }
 
 .header {
@@ -9,9 +11,8 @@
   display: grid;
   grid-template-rows: 1fr auto 1fr;
   align-items: start;
-  font-size: 1.125rem;;
-  margin: 0 auto;
-  max-inline-size: 64rem;
+  inset: 0 auto;
+  margin-block-end: 3.75rem;
   min-block-size: 48rem;
 }
 
@@ -25,8 +26,8 @@
   position: absolute;
   content: '';
   display: block;
-  inset-inline-end: var(--header-padding);
-  inset-block-start: var(--header-padding);
+  inset-inline-end: var(--main-padding);
+  inset-block-start: var(--main-padding);
   block-size: 25px;
   border-inline-end: 1px solid var(--main-font-color);
   border-block-start: 1px solid var(--main-font-color);
@@ -37,8 +38,8 @@
   position: absolute;
   content: '';
   display: block;
-  inset-inline-start: var(--header-padding);
-  inset-block-end: var(--header-padding);
+  inset-inline-start: var(--main-padding);
+  inset-block-end: var(--main-padding);
   block-size: 25px;
   border-inline-start: 1px solid var(--main-font-color);
   border-block-end: 1px solid var(--main-font-color);
@@ -46,11 +47,10 @@
 }
 
 .header__theme-menu {
-  font-family: 'IBM Plex mono', sans-serif;
   font-weight: normal;
   text-transform: lowercase;
   justify-self: center;
-  margin-block-start: var(--header-padding);
+  margin-block-start: var(--main-padding);
 }
 
 .header__theme-menu-list {
@@ -69,7 +69,6 @@
 }
 
 .header__logo {
-  font-family: 'IBM Plex mono', sans-serif;
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   color: #ffc2e6;
   text-shadow: 4px 4px 0 var(--accent-color);
@@ -78,14 +77,13 @@
 }
 
 .header__title {
-  width: max(50% - var(--header-padding), 375px - 2 * var(--header-padding));
-  margin-inline-end: var(--header-padding);
-  margin-block-end: var(--header-padding);
+  width: max(50% - var(--main-padding), 375px - 2 * var(--main-padding));
+  margin-inline-end: var(--main-padding);
+  margin-block-end: var(--main-padding);
   justify-self: end;
   align-self: center;
   color: var(--main-font-color);
-  font-family: 'IBM Plex Mono', sans-serif;
-  font-weight: 700;
+  font-weight: bold;
   line-height: 23.4px;
 }
 
@@ -93,33 +91,77 @@
   background-color: #ff8dcb;
 }
 
-@media (width <= 768px) {
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+}
 
-  :root {
-    --accent-color: #ff8dcb;
-    --header-padding: clamp(0.625rem, 0.0286rem + 2.5445vw, 1.25rem);
-  }
+.first-section {
+  padding: 0 var(--main-padding);
+  display: grid;
+  gap: 1.25rem;
+  grid-template-columns: 1fr 1fr 1fr;
+}
 
+.section-header {
+  font-size: inherit;
+}
+
+.section-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+  grid-column: 2/-1;
+}
+
+.article-header {
+  font-size: inherit;
+  margin-block-end: 10px;
+}
+
+@media (width < 1024px) {
   .header {
     min-block-size: clamp(41.75rem, 20.5191rem + 90.5852vw, 64rem);
+    margin-block-end: clamp(2.5rem, 1.3073rem + 5.0891vw, 3.75rem);
   }
 
   .header__theme-menu-list {
     flex-direction: column;
   }
 
-  .header__title {
-    margin-inline-start: var(--header-padding);
-  }
-  
   .header__theme-menu {
     justify-self: end;
     align-self: center;
-    margin-inline-end: var(--header-padding);
+    margin-inline-end: var(--main-padding);
+  }
+
+  .first-section {
+    grid-template-columns: 1fr 2fr;
+  }
+}
+
+@media (width < 768px) {
+
+  :root {
+    --accent-color: #ff8dcb;
+    --main-padding: clamp(0.625rem, 0.0286rem + 2.5445vw, 1.25rem);
+  }
+
+  .header__title {
+    margin-inline-start: var(--main-padding);
   }
 
   .header__logo {
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
     margin-inline-start: calc(0.625rem - clamp(0rem, -0.5964rem + 2.5445vw, 0.625rem));
+  }
+
+  .first-section {
+    grid-template-columns: 1fr;
+  }
+
+  .section-content {
+    grid-column: 1/-1;
   }
 }
