--- a/styles/style.css
+++ b/styles/style.css
@@ -122,6 +122,26 @@
   width: calc((100vw - 2 * var(--main-padding) - 2 * 1.25rem)/3 );
 }
 
+.third-section__article {
+  grid-column: 2/-1;
+}
+
+.third-section__list-header {
+  font-weight: normal;
+}
+
+.third-section__article-header {
+  margin-block-end: 1.25rem;
+}
+
+.third-section__list-header {
+  margin-block-end: 0.625rem;
+}
+
+.third-section__article li:not(:last-of-type) {
+  margin-block-end: 1.25rem;
+}
+
 @media (width < 1024px) {
   .header {
     min-block-size: clamp(41.75rem, 20.5191rem + 90.5852vw, 64rem);
@@ -139,6 +159,10 @@
   }
 
   .first-section {
+    grid-template-columns: 1fr 2fr;
+  }
+  
+  .third-section {
     grid-template-columns: 1fr 2fr;
   }
 
@@ -172,7 +196,15 @@
     grid-template-columns: 1fr;
   }
 
+  .third-section {
+    grid-template-columns: 1fr;
+  }
+
   .first-section__article {
+    grid-column: 1/-1;
+  }
+
+  .third-section__article {
     grid-column: 1/-1;
   }
 
