added fourth section

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,10 @@
   font-family: 'IBM Plex mono', sans-serif;
   font-size: 18px;
   line-height: 23.4px;
+  background-image: url(../images/cover-image.png);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 .header {
@@ -17,9 +21,7 @@
 }
 
 .decorated-zone {
-  background-image: url(../images/cover-image-light.png);
-  background-size: cover;
-  background-position: center;
+  
 }
 
 .header::before {
@@ -142,6 +144,45 @@
   margin-block-end: 1.25rem;
 }
 
+.fourth-section {
+  grid-template-rows: auto 260px 315px 428px;
+}
+
+.fourth-section__header {
+  grid-column: 1/-1;
+}
+
+.first-image {
+  grid-column: 1/3;
+  grid-row: 2/3;
+}
+
+.second-image {
+  grid-column: 3/4;
+  grid-row: 2/4;
+}
+
+.third-image {
+  grid-column: 1/2;
+  grid-row: 3/5;
+}
+
+.fourth-image {
+  grid-column: 2/3;
+  grid-row: 3/4;
+}
+
+.fifth-image {
+  grid-column: 2/4;
+  grid-row: 4/5;
+}
+
+.fourth-section img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 @media (width < 1024px) {
   .header {
     min-block-size: clamp(41.75rem, 20.5191rem + 90.5852vw, 64rem);
@@ -168,6 +209,14 @@
 
   .second-section {
     grid-template-columns: 1fr;
+  }
+
+  .fourth-section {
+    grid-template-rows: 
+      auto 
+      clamp(12rem, -0.75rem + 26.5625vw, 16.25rem)
+      clamp(14.375rem, -1.5625rem + 33.2031vw, 19.6875rem)
+      clamp(19.875rem, -0.75rem + 42.9688vw, 26.75rem);
   }
 }
 
@@ -210,5 +259,36 @@
 
   .second-section__header {
     width: 100%;
+  }
+
+  .fourth-section {
+    gap: clamp(0.625rem, 0.0286rem + 2.5445vw, 1.25rem);
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6, auto);
+  }
+  
+  .first-image {
+    grid-column: 1/-1;
+    grid-row: 2/3;
+  }
+  
+  .second-image {
+    grid-column: 1/-1;
+    grid-row: 3/4;
+  }
+  
+  .third-image {
+    grid-column: 1/-1;
+    grid-row: 4/5;
+  }
+  
+  .fourth-image {
+    grid-column: 1/-1;
+    grid-row: 5/6;
+  }
+  
+  .fifth-image {
+    grid-column: 1/-1;
+    grid-row: 6/7;
   }
 }
