--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,4 +2,10 @@
   --accent-color: #ff0070;
   --main-font-color: #353430;
   --main-padding: 1.25rem;
+  --main-logo-color: #ffc2e6;
+  --decor-title-color: #FF8DCB;
+  --title-color: #353430;
+  --article-header-color: #353430;
+  --decorated-color: #353430;
+  --button-color: #353430;
 }
