--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,70 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
+:root .theme_dark {
+  --main-font-color: #F1B2CE;
+  --main-logo-color: #DB00FF;
+  --decor-title-color: #FF0070;
+  --title-color: #000028;
+  --article-header-color: #FF0070;
+  --decorated-color: #FF0070;
+  --button-color: #FF0070;
+}
 
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  background-image: url(../images/cover-image-dark.png);
+}
+
+.page.theme_dark .dark-theme-decor {
+  display: block;
+  line-height: 25px;
+  display: flex;
+  justify-content: center;
+  gap: 4px;
+  align-items: center;
+  position: absolute;
+  inset-block-start: var(--main-padding);
+  inset-inline-end: calc(var(--main-padding) + 4px);
+  color: var(--button-color);
+}
+
+.dark-theme-decor::after {
+  width: 21px;
+  height: 21px;
+  display: inline-block;
+  content: "";
+  background-image: url(../images/ellipse.png);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --main-font-color: #F1B2CE;
+    --main-logo-color: #DB00FF;
+    --decor-title-color: #FF0070;
+    --title-color: #000028;
+    --article-header-color: #FF0070;
+    --decorated-color: #FF0070;
+    --button-color: #FF0070;
+  }
+
+  .page {
+    background-image: url(../images/cover-image-dark.png);
+  }
+
+  .dark-theme-decor {
+    line-height: 25px;
+    display: flex;
+    justify-content: center;
+    gap: 4px;
+    align-items: center;
+    position: absolute;
+    inset-block-start: var(--main-padding);
+    inset-inline-end: calc(var(--main-padding) + 4px);
+    color: var(--button-color);
+  }
+  
+  .dark-theme-decor::after {
+    width: 21px;
+    height: 21px;
+    display: inline-block;
+    content: "";
+    background-image: url(../images/ellipse.png);
+  }
 }
