--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,27 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
+:root .theme_light {
+  --accent-color: #ff0070;
+  --main-font-color: #353430;
+  --main-logo-color: #ffc2e6;
+  --decor-title-color: #FF8DCB;
+  --title-color: #353430;
+  --decorated-color: #353430;
+  --button-color: #353430;
+}
 
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  background-image: url(../images/cover-image-light.png);
+}
+
+.page.theme_light .dark-theme-decor {
+  display: none;
+}
+
+@media (prefers-color-scheme: light) {
+  .page {
+    background-image: url(../images/cover-image-light.png);
+  }
+
+  .dark-theme-decor {
+    display: none;
+  }
 }
