--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,4 +8,5 @@
   --article-header-color: #353430;
   --decorated-color: #353430;
   --button-color: #353430;
+  --button-color-hover: rgba(50, 49, 45, 40%);
 }
