--- a/styles/light.css
+++ b/styles/light.css
@@ -2,11 +2,11 @@
   --accent-color: #ff0070;
   --main-font-color: #353430;
   --main-logo-color: #ffc2e6;
-  --decor-title-color: #FF8DCB;
+  --decor-title-color: #ff8dcb;
   --title-color: #353430;
   --decorated-color: #353430;
   --button-color: #353430;
-  --button-color-hover: rgba(50, 49, 45, 40%);
+  --button-color-hover: rgb(50 49 45 / 0.4);
 }
 
 .page.theme_light {
@@ -18,6 +18,7 @@
 }
 
 @media (prefers-color-scheme: light) {
+
   .page {
     background-image: url(../images/cover-image-light.png);
   }
