--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,10 +3,10 @@
   --main-font-color: #353430;
   --main-padding: 1.25rem;
   --main-logo-color: #ffc2e6;
-  --decor-title-color: #FF8DCB;
+  --decor-title-color: #ff8dcb;
   --title-color: #353430;
   --article-header-color: #353430;
   --decorated-color: #353430;
   --button-color: #353430;
-  --button-color-hover: rgba(50, 49, 45, 40%);
+  --button-color-hover: rgb(50 49 45 / 0.4);
 }
