--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,4 +1,5 @@
 :root .theme_dark {
+  --main-color: #000028;
   --main-font-color: #f1b2ce;
   --main-logo-color: #db00ff;
   --decor-title-color: #ff0070;
@@ -36,6 +37,7 @@
 @media (prefers-color-scheme: dark) {
 
   :root {
+    --main-color: #000028;
     --main-font-color: #f1b2ce;
     --main-logo-color: #db00ff;
     --decor-title-color: #ff0070;
