--- a/styles/light.css
+++ b/styles/light.css
@@ -1,4 +1,5 @@
 :root .theme_light {
+  --main-color: #fff1f7;
   --accent-color: #ff0070;
   --main-font-color: #353430;
   --main-logo-color: #ffc2e6;
