--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,5 +1,6 @@
 :root .theme_dark {
   --main-color: #000028;
+  --accent-color: #ff0070;
   --main-font-color: #f1b2ce;
   --main-logo-color: #db00ff;
   --decor-title-color: #ff0070;
@@ -38,6 +39,7 @@
 
   :root {
     --main-color: #000028;
+    --accent-color: #ff0070;
     --main-font-color: #f1b2ce;
     --main-logo-color: #db00ff;
     --decor-title-color: #ff0070;
