--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,7 @@
   inset: 0 auto;
   margin-block-end: 3.75rem;
   min-block-size: 48rem;
+  block-size: max(668px, 100vh);
 }
 
 .decorated-zone::before {
@@ -63,6 +64,7 @@
 }
 
 .header__theme-menu-button {
+  cursor: pointer;
   color: var(--button-color);
   border: none;
   background-color: transparent;
@@ -214,6 +216,7 @@ a:focus-visible {
   margin-block-start: 3.75rem;
   position: relative;
   min-block-size: 48rem;
+  block-size: max(668px, 100vh);
   display: grid;
   place-items: center;
 }
@@ -271,7 +274,6 @@ a:focus-visible {
 }
 
 @media (width < 768px) {
-
   :root {
     --accent-color: #ff8dcb;
     --main-padding: clamp(0.625rem, 0.0286rem + 2.5445vw, 1.25rem);
@@ -282,6 +284,7 @@ a:focus-visible {
   }
 
   .header__logo {
+    text-shadow: 4px 4px 0 var(--accent-color);
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
     margin-inline-start: calc(
       0.625rem - clamp(0rem, -0.5964rem + 2.5445vw, 0.625rem)
